--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Scrape Heem</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Scrape Heem</title>
+  <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 
 </head>
-<body>
-    <nav>
-        <div class="navbar-fixed orange accent-3">
-          <a href="#" class="brand-logo">Scraper</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="badges.html">Saved Articles</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container">
-        <div class="row">
-            <div class="col s6">
-                    <div class="divider"></div>
-                    <div class="section">
-                      <h5>Article 1</h5>
-                      <p>description</p>
-                    </div>
-                    <div class="divider"></div>
-                    <div class="section">
-                      <h5>Article 2</h5>
-                      <p>description</p>
-                    </div>
-                    <div class="divider"></div>
-                    <div class="section">
-                      <h5>Article 3</h5>
-                      <p>description</p>
-                    </div>
-            </div>             
-            <div class="col s6"></div>
-        </div>
-      <div>
 
-        </div>
+<body>
+  <nav>
+    <div class="navbar-fixed orange darken-3">
+      <a href="#" class="brand-logo light italic">Mongo Scraper</a>
+      
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li>
+          <a href="badges.html">Saved Articles</a>
+        </li>
+        <li>
+          <a href="collapsible.html">JavaScript</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <br>
+    <div class= "row">
+      <div class= "col s2">
+        <img src="https://podtail.com/content/images/podcast/artwork/600/y/-/y-combinator.jpg" width ="100px" height="100px" alt="">
       </div>
+      <div class= "col s10">
+        <h1 class="thin"> Combinator Articles</h1>
+      </div>
+    </div>
+    <div class="row">
+      <!-- <div class="col s6">
+        <div class="divider"></div>
+        <div class="section">
+          <h5>Article 1</h5>
+          <p>description</p>
+        </div>
+        <div class="divider"></div>
+        <div class="section">
+          <h5>Article 2</h5>
+          <p>description</p>
+        </div>
+        <div class="divider"></div>
+        <div class="section">
+          <h5>Article 3</h5>
+          <p>description</p>
+        </div>
+      </div> -->
+      <div class="col s6"></div>
+    </div>
+    <div>
+
+    </div>
+  </div>
+  <script src="static/app.js"></script>
 </body>
+
 </html>
